# StockTrader

./: .dockerignore  .env.example  .gitignore  DOCKER_USAGE.md  Dockerfile  README.md  TODO.md  config.py  docker-compose.yml  docker-run-dev.bat  docker-run-dev.sh  docker-run-prod.bat  docker-run-prod.sh  env.example  example_usage.py  filter_stocks.py  main.py  project_var.py  pyproject.toml  single_run.py  test.py  test_fetch.py  test_local_data_check.py  test_update.py
cache/: adj_factor_cache.csv  basic_info_update.json  calendar_SSE_update.json  calendar_SZSE_update.json  calendar_update.json  data_existence_matrix.pkl  trade_calendar_SSE.csv
core/: __init__.py
docs/: DOCKER_IMAGE_VERSION.md  DOCKER_MIRROR_FIX.md  DOCKER_USAGE.md  NAS_DEPLOYMENT.md  akshare_api.md  architecture_improvement.md  docker-compose-guide.md  docker-mirror-setup.md  docker-nas-guide.md  docker-问题解决总结.md  indicator_calculator_usage.md  kdj_strategy.py  pd_to_numeric_usage.md  strategy_runner_usage.md  tushare_api.md  新方案.md  知行多空趋势线指标文档.md  股票数据爬虫架构设计文档.md
examples/: filter_stocks.py  main.py
output/: debug_少妇战法（简化）_20251221.csv
references/: fetch_kline.py  tushare_api.md
scripts/: clear_kline_data.py  crawl_stock_data.py  crawler.py  create_database.py  daily_recommend.py  daily_update.py  debug_stock_date.py  debug_strategy.py  fetch_calendar.py  fetch_kline_data.py  init_sqlite_db.py  list_industries.py  run_basic_info.py  run_daily_pipeline.py  run_fetch.py  run_fetch_adj_factor.py  run_fetch_calendar.py  run_fetch_daily_kline.py  run_fetcher.py  run_generate_data_matrix.py  run_kdj_strategy_demo.py  run_strategies.py  run_strategy_pipeline.py  schedule_daily.py  supplement_single_stock_history.py  test_api.py  test_batch_fetch.py  test_detect_missing_dates.py  test_english_columns.py  test_fill_missing_data.py  test_missing_dates.py  test_stock_data_fetcher.py  verify_batch_fetch.py
src/: config.py  manager.py
tests/: conftest.py  test_adj_factor_collector.py  test_adj_factor_fetcher.py  test_adj_factor_manager.py  test_akshare_fetch.py  test_all_modules.py  (+18 more)
(+196 files in other folders)
