[project]
name = "stocktrader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.2",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
    "tushare>=1.4.24",
    "uvicorn>=0.38.0",
]
