[project]
name = "stocktrader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.17.96",
    "fastapi>=0.124.2",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "python-dotenv>=1.2.1",
    "scipy>=1.16.3",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
    "tushare>=1.4.24",
    "uvicorn>=0.38.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
]
