[project]
name = "stocktrader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.17.96",
    "fastapi>=0.124.2",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "python-dotenv>=1.2.1",
    "scipy>=1.16.3",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
    "tushare>=1.4.24",
    "uvicorn>=0.38.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "cryptography>=46.0.3",
]

[tool.pytest.ini_options]
# 注册自定义标记，避免 pytest 警告
markers = [
    "api: 标记需要调用外部 API 的测试（需要有效的 TUSHARE_TOKEN）",
    "slow: 标记运行时间较长的测试（如获取所有股票数据）",
]
# 默认跳过慢速测试，可以通过 -m slow 来运行
addopts = "-v --tb=short -m 'not slow'"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
